// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal footer it matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="header className"
    style="display: inline;"
  >
    Header
  </div>
</DocumentFragment>
`;

exports[`Modal header it matches snapshot with no props 1`] = `
<ModalHeader>
  <div
    className="header"
  >
    Header
  </div>
</ModalHeader>
`;

exports[`Modal header it matches snapshot with props 1`] = `
<ModalHeader
  className="className"
  style={
    Object {
      "display": "inline",
    }
  }
>
  <div
    className="header className"
    style={
      Object {
        "display": "inline",
      }
    }
  >
    Header
  </div>
</ModalHeader>
`;
